--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       <div class="carousel-inner">
 
         <div class="carousel-item active">
-          <img src="/images/2.jpg" class="d-block w-100" alt="...">
+          <img src="images/2.jpg" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h2>Welcome to iCoder</h2>
             <p>Technology News, Development, Trends, Latest news...</p>
